page invest atualizada

--- a/invest.html
+++ b/invest.html
@@ -102,8 +102,7 @@
             <div class="input-group">
               <label for="sr-only" form="amount"> Valor do Depósito ou Investimento </label>
               <input
-                type="number"
-                step="0.01"
+                type="text"
                 name="amount"
                 id="amount"
                 placeholder="0,00"
