--- a/invest.html
+++ b/invest.html
@@ -77,7 +77,7 @@
           <p>
             <img
               src="./assets/asterisk.svg"
-              alt="Asterisk informando que o asteristico significa que o valor é um investimento"
+              alt="Asterisk informando que o asterisco significa que o valor é um investimento"
             />
             = Valor investido
           </p>
@@ -129,11 +129,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <footer>
-      <span>&copy; Lucas Anselmo Moraes Da Silva <p>2021</p></span>
-    </footer> -->
-
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
