--- a/investing.html
+++ b/investing.html
@@ -55,15 +55,15 @@
             <div class="card">
               <img src="./assets/cards/009-bank.svg" alt="" />
               <p class="card_text">
-                De inicio, invista seu dinheiro em uma instuição financeira de
+                De inicio, invista seu dinheiro em uma instituição financeira de
                 sua confiança, de preferencia, que não tenha muitas taxas.
               </p>
             </div>
             <div class="card">
               <img src="./assets/cards/013-profit.svg" alt="" />
               <p class="card_text">
-                Nessa instuição, opte pelas melhores performance de valorizarem
-                seu dinherio, não realizando descontos com taxas de pagamnetos
+                Nessa instituição, opte pelas melhores performance de valorizarem
+                seu dinheiro, não realizando descontos com taxas de pagamentos
                 por mês e sim valorização de dinheiro.
               </p>
             </div>
@@ -71,13 +71,13 @@
               <img src="./assets/cards/016-idea.svg" alt="" />
               <p class="card_text">
                 Procure por ideias de negocio, pequenos ou grande, onde você
-                possa ser um socio de algum empreendimento.
+                possa ser um sócio de algum empreendimento.
               </p>
             </div>
             <div class="card">
               <img src="./assets/cards/027-money.svg" alt="" />
               <p class="card_text">
-                Quando você realizar esse passo de iniciae como socio, ou um
+                Quando você realizar esse passo de inicio como sócio, ou um
                 mini investimento em algo, seu dinheiro começará a ser
                 valorizado.
               </p>
